# aps

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PR_MESSAGE.md  README.md  TEST_PLAN_CURSOR_HOOKS.md  aps.lock.yaml  aps.yaml  install.sh
.claude/hooks/: session-start.sh
.github/instructions/: *.instructions.md  general.instructions.md
.github/workflows/: ci.yml  claude.yml  release.yml
.trunk/: trunk.yaml
docs/: adapter-pattern-spec.md  architecture.md  catalog-search-spec.md  rust-build-distribution.md
src/: backup.rs  catalog.rs  checksum.rs  cli.rs  commands.rs  compose.rs  discover.rs  error.rs  git.rs  github_url.rs  hooks.rs  install.rs  lockfile.rs  main.rs  manifest.rs  orphan.rs  sync_output.rs
src/sources/: filesystem.rs  git.rs  mod.rs
tests/: cli.rs
