[package]
name = "aps"
version = "0.1.5"
edition = "2021"
description = "Manifest-driven CLI for syncing agentic assets"
authors = ["APS Contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/westonplatter/agentic-prompt-sync"
homepage = "https://github.com/westonplatter/agentic-prompt-sync"
keywords = ["cli", "sync", "agents", "cursor", "claude"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# Argument parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# Terminal styling
console = "0.15"

# Errors & diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Date/time for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Checksum computation
sha2 = "0.10"
hex = "0.4"

# File operations
walkdir = "2"

# Temp directories for git clones
tempfile = "3"

# Shell variable expansion
shellexpand = "3"

[dev-dependencies]
# Integration testing for CLI
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
